--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,10 @@ name = "pypi"
 "python-dotenv"="0.15.0"
 "numpy"="<=1.18.5"
 "pandas"="1.1.5"
+"scikit-learn"="0.24.0"
+"matplotlib"="3.3.3"
+"seaborn"="0.11.1"
+"xgboost"="1.3.2"
 [dev-packages]
 
 [requires]
